# clang-static-analyzer-example-out-of-tree

./: CMakeLists.txt  MainCallChecker.cpp  Readme.md  meson.build  test.c
